--- a/src/app/functions/asset/components/asset/asset.component.html
+++ b/src/app/functions/asset/components/asset/asset.component.html
@@ -1,1 +1,65 @@
-<p>asset works!</p>
+<h2>Gestión Activos</h2>
+
+<button mat-raised-button color="primary" routerLink="/assets/create">
+  Crear Nuevo Activo
+</button>
+
+<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2">
+
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+    <td mat-cell *matCellDef="let asset"> {{ asset.id }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="code">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Código </th>
+    <td mat-cell *matCellDef="let asset"> {{ asset.code }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="description">
+    <th mat-header-cell *matHeaderCellDef> Descripción </th>
+    <td mat-cell *matCellDef="let asset"> {{ asset.description }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="type">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo </th>
+    <td mat-cell *matCellDef="let asset"> {{ asset.type }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="sector">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Sector </th>
+    <td mat-cell *matCellDef="let asset"> {{ asset.sector }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="market">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Mercado </th>
+    <td mat-cell *matCellDef="let asset"> {{ asset.market }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="codeAlt">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header> Código Alternativo </th>
+    <td mat-cell *matCellDef="let asset"> {{ asset.codeAlt }} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef> Acciones </th>
+    <td mat-cell *matCellDef="let asset">
+      <button mat-icon-button color="primary" (click)="onEdit(asset.id)">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button color="warn" (click)="onDelete(asset.id)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+</table>
+
+<mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+</mat-paginator>
+
+<br />
+<a routerLink="/">Volver a la Página Principal</a>
