--- a/src/app/functions/asset/components/asset/asset.component.html
+++ b/src/app/functions/asset/components/asset/asset.component.html
@@ -1,65 +1,69 @@
-<h2>Gestión Activos</h2>
+<h2>Asset Management</h2>
 
 <button mat-raised-button color="primary" routerLink="/assets/create">
-  Crear Nuevo Activo
+  Create New Asset
 </button>
 
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2">
+<br />
 
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-    <td mat-cell *matCellDef="let asset"> {{ asset.id }} </td>
-  </ng-container>
+<div class="table-container">
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z2">
 
-  <ng-container matColumnDef="code">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Código </th>
-    <td mat-cell *matCellDef="let asset"> {{ asset.code }} </td>
-  </ng-container>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+      <td mat-cell *matCellDef="let asset"> {{ asset.id }} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef> Descripción </th>
-    <td mat-cell *matCellDef="let asset"> {{ asset.description }} </td>
-  </ng-container>
+    <ng-container matColumnDef="code">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Code </th>
+      <td mat-cell *matCellDef="let asset"> {{ asset.code }} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="type">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo </th>
-    <td mat-cell *matCellDef="let asset"> {{ asset.type }} </td>
-  </ng-container>
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <td mat-cell *matCellDef="let asset"> {{ asset.description }} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="sector">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Sector </th>
-    <td mat-cell *matCellDef="let asset"> {{ asset.sector }} </td>
-  </ng-container>
+    <ng-container matColumnDef="type">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
+      <td mat-cell *matCellDef="let asset"> {{ asset.type }} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="market">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Mercado </th>
-    <td mat-cell *matCellDef="let asset"> {{ asset.market }} </td>
-  </ng-container>
+    <ng-container matColumnDef="sector">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Sector </th>
+      <td mat-cell *matCellDef="let asset"> {{ asset.sector }} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="codeAlt">
-    <th mat-header-cell *matHeaderCellDef mat-sort-header> Código Alternativo </th>
-    <td mat-cell *matCellDef="let asset"> {{ asset.codeAlt }} </td>
-  </ng-container>
+    <ng-container matColumnDef="market">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Market </th>
+      <td mat-cell *matCellDef="let asset"> {{ asset.market }} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="actions">
-    <th mat-header-cell *matHeaderCellDef> Acciones </th>
-    <td mat-cell *matCellDef="let asset">
-      <button mat-icon-button color="primary" (click)="onEdit(asset.id)">
-        <mat-icon>edit</mat-icon>
-      </button>
-      <button mat-icon-button color="warn" (click)="onDelete(asset.id)">
-        <mat-icon>delete</mat-icon>
-      </button>
-    </td>
-  </ng-container>
+    <ng-container matColumnDef="codeAlt">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Alternate Code </th>
+      <td mat-cell *matCellDef="let asset"> {{ asset.codeAlt }} </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <td mat-cell *matCellDef="let asset">
+        <button mat-icon-button color="primary" (click)="onEdit(asset.id)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="onDelete(asset.id)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
 
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  </table>
+</div>
 
 <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
 </mat-paginator>
 
 <br />
-<a routerLink="/">Volver a la Página Principal</a>
+<a routerLink="/">Back to Home Page</a>
