--- a/src/app/functions/asset/components/asset/asset.component.css
+++ b/src/app/functions/asset/components/asset/asset.component.css
@@ -12,3 +12,32 @@ table.mat-mdc-table {
 .table-container {
     margin-top: 20px; /* Adjust as needed */
 }
+
+.toolbar-title {
+    justify-content: center;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.button-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+  
+.link-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.title-card {
+    text-align: center;
+    margin-bottom: 20px;
+    background-color: #f5f5f5;
+    font-size: 24px;
+    font-weight: bold;
+}
+  
