Implementacion de Toolbar de la aplicacion

--- a/src/app/functions/dashboard/components/home/home.component.html
+++ b/src/app/functions/dashboard/components/home/home.component.html
@@ -1,7 +1,32 @@
-<h1>Pollogestor 3000 - Descarga de Precios</h1>
+<app-toolbar></app-toolbar>
 
-<nav>
+<div class="page-title">
+<h1>Pollogestor 3000 - Descarga de Precios</h1>
+</div>
+
+<mat-card class="home-card">
+  <mat-card-header>
+    <mat-card-title>Welcome to Asset Price Store</mat-card-title>
+    <mat-card-subtitle>Manage assets and price data efficiently</mat-card-subtitle>
+  </mat-card-header>
+
+  <br>
+  <img mat-card-image src="assets/img/store-dashboard.jpg" alt="Asset Price Store Dashboard"> 
+
+  <mat-card-content>
+    <p>
+      This application helps you manage your financial assets and import their market prices
+      quickly and intuitively. Use the toolbar to navigate between features.
+    </p>
+  </mat-card-content>
+</mat-card>
+
+<!-- <nav>
   <a routerLink="/assets">Gestion Activos</a><br>
   <a routerLink="/download">Descarga Precios</a>
-</nav>
+</nav> --> 
 
+<br>
+<div class="page-copyright">
+  <p> (C) Universo Java 2025-2026 </p>
+</div>
