--- a/src/app/functions/asset/components/asset/asset.component.html
+++ b/src/app/functions/asset/components/asset/asset.component.html
@@ -1,11 +1,16 @@
 
-<mat-toolbar color="primary" class="toolbar-title">
+<app-toolbar></app-toolbar>
+<!-- <mat-toolbar color="primary" class="toolbar-title">
   <span>Asset Management</span>
-</mat-toolbar>
+</mat-toolbar> -->
 
 <!-- <mat-card class="title-card">
   <mat-card-title>Asset Management</mat-card-title>
 </mat-card> -->
+
+<div class="page-title">
+  <h1>Asset Management</h1>
+</div>
 
 <div class="button-container">
   <button mat-raised-button color="primary" routerLink="/assets/create">
@@ -56,10 +61,10 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Actions </th>
       <td mat-cell *matCellDef="let asset">
-        <button mat-icon-button color="primary" (click)="onEdit(asset.id)">
+        <button mat-icon-button color="primary" matTooltip="Edit" (click)="onEdit(asset.id)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button color="warn" (click)="onDelete(asset.id)">
+        <button mat-icon-button color="warn" matTooltip="Delete" (click)="onDelete(asset.id)">
           <mat-icon>delete</mat-icon>
         </button>
       </td>
@@ -74,7 +79,12 @@
 <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
 </mat-paginator>
 
-<br />
+<!-- <br />
 <div class="link-container">
   <a routerLink="/">Back to Home Page</a>
+</div> -->
+
+<br>
+<div class="page-copyright">
+  <p> (C) Universo Java 2025-2026 </p>
 </div>
